--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,6 @@ header {
 
 .projects {
 
-    padding: 0.5rem;
     margin: 5rem;
     margin-top: 2rem;
 
@@ -36,7 +35,7 @@ header {
 
 .project img {
     max-width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     transition: 1s;
     backface-visibility: hidden;
 }
@@ -56,8 +55,6 @@ header {
 
     width: 100%;
     height: 100%;
-
-    background-color: aqua;
     display: grid;
 
 }
@@ -69,4 +66,40 @@ header {
 .back h2 {
     align-self: center;
     justify-self: center;
+}
+
+.palevioletred {
+    background-color: palevioletred;
+}
+
+.steelblue {
+    background-color: steelblue;
+}
+
+.lightskyblue {
+    background-color: lightskyblue;
+}
+
+.darkslateblue {
+    background-color: darkslateblue;
+}
+
+.sandybrown {
+    background-color: sandybrown;
+}
+
+@media (max-width : 1555px) {
+    .projects {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width : 1100px) {
+    .projects {
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .project {
+        height: auto;
+    }
 }
