--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,101 +1,111 @@
 body {
-  display: grid;
-  height: 100vh;
-  font-family: Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: whitesmoke;
-  grid-template-rows: auto 1fr;
+	display: grid;
+	height: 100vh;
+	font-family: Helvetica, sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: whitesmoke;
+	grid-template-rows: auto 1fr;
 }
 
 header {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
 }
 
 .column {
-  grid-column: span 1;
-  height: 100vh;
-  max-height: 100vh;
-  /* max-height: 3rem; */
-  text-align: center;
-  transition: 1s;
+	grid-column: span 1;
+	height: 100vh;
+	max-height: 100vh;
+	/* max-height: 3rem; */
+	text-align: center;
+	transition: max-height 0.6s;
 }
 
 h1 {
-  font-size: 1rem;
-  font-weight: 100;
-  cursor: pointer;
+	font-size: 1rem;
+	font-weight: 100;
+	cursor: pointer;
 }
 
 .project {
-  color: whitesmoke;
-  font-weight: 100;
-  cursor: pointer;
-  transition: 0.4s;
+	color: whitesmoke;
+	font-weight: 100;
+	cursor: pointer;
+	transition: 0.4s;
 }
 
 .project:hover {
-  color: gray;
+	color: gray;
 }
 
 .pink {
-  background-color: magenta;
+	background-color: magenta;
 }
 
 .purple {
-  background-color: purple;
+	background-color: purple;
 }
 
 .orange {
-  background-color: orange;
+	background-color: orange;
 }
 
 .yellow {
-  background-color: yellowgreen;
+	background-color: yellowgreen;
 }
 
 .showcase {
-  display: none;
-  max-height: 0rem;
-  /* max-height: 100%; */
-  /* display: grid; */
-  align-items: center;
-  justify-items: center;
+	display: none;
+	max-height: 0rem;
+	/* max-height: 100%; */
+	/* display: grid; */
+	align-items: center;
+	justify-items: center;
+}
+
+.showcase-box {
+	display: grid;
+	transition: 1s;
+	justify-items: center;
+	align-items: center;
+}
+
+.showcase-box img {
+	max-height: 100%;
+	max-width: 100%;
+	pointer-events: none;
 }
 
 .content {
-  display: grid;
-  align-items: center;
+	display: grid;
+	align-items: center;
 }
 
 .main {
-  background-color: pink;
-  width: 60vw;
-  height: 60vh;
-  z-index: 2;
-  grid-row: 1/2;
-  grid-column: 1/2;
+	width: 60vw;
+	height: 80vh;
+	z-index: 2;
+	grid-row: 1/2;
+	grid-column: 1/2;
 }
 
 .left {
-  background-color: lavender;
-  width: 30vw;
-  height: 30vh;
-  z-index: 1;
-  grid-row: 1/2;
-  grid-column: 1/2;
-  margin-left: -25%;
-  justify-self: left;
+	width: 30vw;
+	height: 40vh;
+	z-index: 1;
+	grid-row: 1/2;
+	grid-column: 1/2;
+	margin-left: -25%;
+	justify-self: left;
 }
 
 .right {
-  background-color: lavender;
-  width: 30vw;
-  height: 30vh;
-  z-index: 1;
-  grid-row: 1/2;
-  grid-column: 1/2;
-  margin-right: -25%;
-  justify-self: right;
+	width: 30vw;
+	height: 40vh;
+	z-index: 1;
+	grid-row: 1/2;
+	grid-column: 1/2;
+	margin-right: -25%;
+	justify-self: right;
 }
