--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,9 +72,11 @@ h1 {
 }
 
 .showcase-box img {
-	max-height: 100%;
+	height: 100%;
 	max-width: 100%;
 	pointer-events: none;
+	grid-column: 1/2;
+	grid-row: 1/2;
 }
 
 .content {
@@ -83,29 +85,30 @@ h1 {
 }
 
 .main {
-	width: 60vw;
 	height: 80vh;
+	width: 80vw;
 	z-index: 2;
 	grid-row: 1/2;
 	grid-column: 1/2;
+	pointer-events: none;
 }
 
 .left {
-	width: 30vw;
 	height: 40vh;
+	width: 30vw;
 	z-index: 1;
 	grid-row: 1/2;
 	grid-column: 1/2;
-	margin-left: -25%;
 	justify-self: left;
+	opacity: 0.5;
 }
 
 .right {
-	width: 30vw;
 	height: 40vh;
+	width: 30vw;
 	z-index: 1;
 	grid-row: 1/2;
 	grid-column: 1/2;
-	margin-right: -25%;
 	justify-self: right;
+	opacity: 0.5;
 }
