--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ h1 {
 }
 
 .pink {
-	background-image: url(../img/blue-jug-and-white2.jpg);
+	background-image: url(../img/blue-jug-and-white2.png);
 	background-position: center;
 	background-size: cover;
 }
