--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 .orange {
-	background-image: url(../img/pink-bowl-web.jpg);
+	background-image: url(../img/pink-bowl-web2.png);
 	background-position: center;
 	background-size: cover;
 }
