--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
 	display: grid;
 	height: 100vh;
-	font-family: Helvetica, sans-serif;
+	font-family: Verdana, sans-serif;
 	margin: 0;
 	padding: 0;
 	background-color: whitesmoke;
