--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@ body {
 	display: grid;
 	height: 100vh;
 	font-family: Helvetica, sans-serif;
-	font-weight: thin;
+	font-size: 1.1rem;
+	letter-spacing: 1px;
 	margin: 0;
 	padding: 0;
 	background-color: whitesmoke;
