--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ header {
 	grid-column: span 1;
 	height: 100vh;
 	max-height: 100vh;
-	/* max-height: 3rem; */
 	text-align: center;
 	transition: max-height 0.6s;
 }
@@ -49,8 +48,8 @@ h1 {
 }
 
 .purple {
-	background-image: url(../img/red-bowl.jpg);
-	background-position: center top;
+	background-image: url(../img/yellow-hand.jpg);
+	background-position: 58% top;
 	background-size: cover;
 }
 
