--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,8 @@ h1 {
 }
 
 .yellow {
-	background-image: url(../img/blue-jug-and-white2.png);
-	background-position: center top;
+	background-image: url(../img/blue-and-white-jug.jpg);
+	background-position: 57% top;
 	background-size: cover;
 }
 
