--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,7 @@ h1 {
 	display: grid;
 	transition: 1s;
 	justify-items: center;
+	grid-template-rows: 1fr 3rem;
 	align-items: center;
 }
 
@@ -123,4 +124,10 @@ h1 {
 
 .title {
 	background-color: rgba(0, 0, 0, 0);
+}
+
+.showcase-box p {
+	color: whitesmoke;
+	font-size: 1rem;
+	width: 20rem;
 }
