Font to verdana

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,8 @@ h1 {
 }
 
 .pink {
-	background-image: url(../img/blue-bowl2.png);
-	background-position: center top;
+	background-image: url(../img/blue-bowl-far-left.jpg);
+	background-position: 52% top;
 	background-size: cover;
 }
 
