Font to verdana

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ h1 {
 }
 
 .orange {
-	background-image: url(../img/pink-bowl-web2.png);
+	background-image: url(../img/pink-bowl-second-to-right.jpg);
 	background-position: center top;
 	background-size: cover;
 }
