Font to verdana

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,7 +125,7 @@ h1 {
 	background-color: rgba(0, 0, 0, 0);
 }
 
-.content p {
+.showcase p {
 	color: whitesmoke;
 	font-size: 1rem;
 	width: 20rem;
