Front right image reduced file size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,7 +60,7 @@ h1 {
 }
 
 .yellow {
-	background-image: url(../img/blue-and-white-jug.png);
+	background-image: url(../img/blue-and-white-jug.jpg);
 	background-position: 57% top;
 	background-size: cover;
 }
